Added # reference name in chapters 01, 02, 11, 12, 14, 15

--- a/02-Data.Rmd
+++ b/02-Data.Rmd
@@ -8,7 +8,7 @@ output:
   pdf_document: default
 ---
 <!--# Working with data-->
-# Trabajar con Datos
+# Trabajar con Datos {#working-with-data}
 
 ```{r echo=FALSE}
 library(tidyverse)
