--- a/11-BayesianStatistics.Rmd
+++ b/11-BayesianStatistics.Rmd
@@ -8,7 +8,7 @@ output:
   html_document: default
 ---
 <!--# Bayesian statistics-->
-# Estadística Bayesiana
+# Estadística Bayesiana {#bayesian-statistics}
 
 
 ```{r echo=FALSE,warning=FALSE,message=FALSE}
